# demochain

./: .env  .env.prod.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  algod-config.json  algod-network-template.json  algorand_addresses.txt  conduit.yml  docker-compose.prod.yml  docker-compose.yml
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  epic.yml  spike.yml  subtask.yml  task.yml  user-story.yml
client/: .oxfmtrc.json  .oxlintrc.json  bun.lockb  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
hello-algorand/: README.md  hello-algorand.code-workspace
network/anchoring/: algorand_reader.py  anchoring_service.py  consensus.py  daemon.py  ethereum_submitter.py  hasher.py  models.py  pyproject.toml  smoke.py
network/anchoring/tests/: test_algorand_reader.py  test_anchoring_service.py  test_consensus.py  test_hasher.py
voting-contract/: .algokit.toml  .gitignore  README.md  demochain.code-workspace  pyproject.toml
voting-contract/projects/demochain/: .algokit.toml  README.md  pyproject.toml
voting-contract/projects/demochain/.algokit/: .copier-answers.yml
voting-contract/projects/demochain/smart_contracts/artifacts/demochain/: Demochain.approval.puya.map  Demochain.approval.teal  Demochain.arc56.json  demochain_client.py
voting-contract/projects/demochain/smart_contracts/demochain/: contract.py  deploy_config.py
voting-contract/projects/demochain/tests/: approval_unit_test.py  cast_election_vote_unit_test.py  census_unit_test.py  organiation_unit_test.py  organization_unit_test.py  proposal_unit_test.py
voting-contract/smart_contracts/: __main__.py
voting-contract/smart_contracts/demochain/: contract.py  deploy_config.py
voting-contract/tests/: approval_unit_test.py  cast_election_vote_unit_test.py  census_unit_test.py  organization_unit_test.py  proposal_unit_test.py
(+214 files in other folders)
