[tool.poetry]
name = "demochain-anchoring"
version = "0.1.0"
description = "Servei d'ancoratge K-de-N dels resultats electorals de Demochain a Ethereum"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algosdk = "^2.7.0"
web3 = "^7.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
